# Machine_Learning_with_Scikit_Keras_Tensorflow_Aurelien_Geron

./: README.md  pyproject.toml
Artificial_Neural_Networks/: 1_perceptron_str304.ipynb  2_MLPRegressor_str_310.ipynb
Artificial_Neural_Networks/.ipynb_checkpoints/: activation_functions-checkpoint.ipynb
Artificial_Neural_Networks/MLP/keras/: 2_regresor_housing_str323.ipynb  5_dostrajanie_parametrow_str337.ipynb  6_normalizacja_wsadowa_str358.ipynb  7_reuzywanie_warstw_str363.ipynb  my_checkpoints.weights.h5  my_model.keras  my_model_A.keras  my_weights.weights.h5
Artificial_Neural_Networks/MLP/sklearn/: 1_perceptron_str304.ipynb  3_MLPClassifier_str_310.ipynb
Data_preparation_and_visualisation/: 1_Housing_dataset_metody_przeszukiwania_parametrow_modelu_str_72.ipynb  2_MINST_dataset_str_119.ipynb
Data_preparation_and_visualisation/.ipynb_checkpoints/: 1_Housing_dataset_metody_przeszukiwania_parametrow_modelu_str_72-checkpoint.ipynb
Decision_trees/Klasyfikacja_trees/: 1_decision_tree_iris_dataet_str_203.ipynb  2_decision_tree_moon_dataset_str_210.ipynb  3_decision_tree_features_str_213.ipynb
Decision_trees/Klasyfikacja_trees/.ipynb_checkpoints/: 1_decision_tree_iris_dataet_str_203-checkpoint.ipynb
Decision_trees/Regresja_trees/: 1_regresion_tree_quad_dataset_str_211.ipynb
K_nearest_neighbors/: 1_Life_satisfaction_str_48.ipynb
PCA/: 1_PCA_str243.ipynb
PCA/.ipynb_checkpoints/: 2_PCA_MNIST_str249-checkpoint.ipynb
Unsupervised_learning/2_DBSCAN/: 1_DBSCAN_str279.ipynb
Unsupervised_learning/3_GaussianMixtureModel/: 1_mieszaniny_gaussowskie_str284.ipynb
(+321 files in other folders)
