[tool.poetry]
name = "machine-learning-with-scikit-keras-tensorflow-aurelien-geron"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.3.5"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
graphviz = "^0.20.3"
tensorflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
